<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carrot_background"
    tools:context="com.example.ryanmahjour.cut.weighing">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorText"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/menu"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            android:layout_gravity="start"
            android:src="@drawable/back_arrow"
            android:background="@android:color/transparent"
            android:layout_weight="0"
            android:onClick="backToHome"/>

        <LinearLayout
            android:id="@+id/okayPerson"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/okay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:layout_marginRight="5dp"
                android:textAlignment="textEnd" />

            <TextView
                android:text="John"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/personName"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/youMeasured"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:text="@string/measured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textAlignment="center" />
        </LinearLayout>


        <!-- height 0dp for improved performance -->
        <LinearLayout
            android:id="@+id/weighingTitle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/you_re_cutting_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:layout_marginRight="7dp"
                android:textSize="30sp"
                android:textAlignment="textEnd" />

            <TextView
                android:text="Carrot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chosenVegtable"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/weighedTitle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:text="10 grams"
                android:id="@+id/total_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textAlignment="textEnd" />

            <TextView
                android:text=" of "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_weight="0"
                android:textSize="30sp"
                android:textAlignment="textStart" />

            <TextView
                android:text="carrot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textAlignment="textStart" />

        </LinearLayout>

    </LinearLayout>

    <!-- Navigation Bar -->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">


            <Button
                android:text="@string/done"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/doneButton"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_blue_light"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:textSize="14sp"
                android:elevation="8dp"
                android:layout_marginBottom="80dp"/>

            <Button
                android:text="@string/tracker"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/trackerButton"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_blue_light"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:textSize="14sp"
                android:elevation="8dp"
                android:layout_marginBottom="80dp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/spinner"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true">

                <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_height="75dp"
                    android:id="@+id/progressBar"
                    android:progressTint="@android:color/holo_blue_light"
                    android:indeterminateTint="@android:color/holo_blue_light"
                    android:layout_width="75dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weighing"
                    android:textSize="22sp"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nutritionsummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/fadedGray"
                android:visibility="gone"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_above="@+id/trackerButton"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp">

                <TextView
                    android:text="@string/nutrition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="normal|bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textAlignment="textStart"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="60dp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:text="5"
                        android:id="@+id/calorie_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textAlignment="textEnd"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="80dp"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/fats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textAlignment="textStart"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="60dp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:text="5g"
                        android:id="@+id/fat_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textAlignment="textEnd"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="80dp"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/carbs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textAlignment="textStart"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="60dp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:text="15g"
                        android:id="@+id/carbs_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textAlignment="textEnd"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="80dp"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/proteins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textAlignment="textStart"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="60dp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:text="20g"
                        android:id="@+id/protein_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textAlignment="textEnd"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="80dp"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/donePopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/fadedBlack"
                android:visibility="gone"
                android:layout_centerInParent="true">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:src="@drawable/checkmark"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:text="@string/done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textAlignment="textStart"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"/>


            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
