<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.ryanmahjour.cut.login">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <TextView
            android:gravity="center"
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Logo"
            android:textStyle="normal|bold|italic"
            android:fontFamily="sans-serif"
            android:textSize="60sp"
            android:textColor="@color/colorText"
            android:textAlignment="center" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_marginTop="60dp"
            android:id="@+id/useremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:inputType="text"
            app:met_baseColor="@color/colorText"
            app:met_underlineColor="@color/colorUnderline"
            app:met_maxCharacters="15"
            app:met_singleLineEllipsis="true"
            app:met_iconLeft="@drawable/email"
            app:met_iconPadding="0dp"/>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:text="Password"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:inputType="textPassword"
            app:met_baseColor="@color/colorText"
            app:met_underlineColor="@color/colorUnderline"
            app:met_maxCharacters="15"
            app:met_singleLineEllipsis="true"
            app:met_iconLeft="@android:drawable/ic_lock_idle_lock"
            app:met_iconPadding="0dp"/>

        <Button
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:textSize="14sp"
            android:elevation="8dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:onClick="loguserIn"/>

        <TextView
            android:text="Or log in with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/OrLogInWith"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_marginTop="25dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/google"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/twitter"
            android:background="@android:color/transparent"
            android:layout_weight="1"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorUnderline"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:text="Don't have an account?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Donthvae"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:textAlignment="viewStart"
                android:layout_marginStart="50dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:layout_weight="0"
                android:text="@string/signup"
                android:background="@android:color/transparent"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:textAlignment="textStart"
                android:layout_marginTop="10dp"
                android:onClick="signUp"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
